Tue May 26 21:00:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct#inspect): fixed the recursion check.
	  Patch by Kornelius Kalnbach.  [ruby-core:20992].

	* test/ostruct/test_ostruct.rb: test for inspect.
	  Patch by Kornelius Kalnbach.  [ruby-core:20992].

Tue May 26 20:50:32 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): handle EBADF of select as well.
	  [ruby-core:21264]

Wed Apr  8 18:59:52 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (subtruct): check tv_sec.

Thu Apr  2 16:06:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/rss/test_atom.rb (RSS::TestAtomCore::assert_atom_content_inline_other_base64_to_s):
	  ditto. [ruby-dev:38248]

Thu Apr  2 15:43:46 2009  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/rss-assertions.rb (RSS::Assertions::assert_atom_content_inline_other_text):
	  newlines are valid for Base64 data. [ruby-dev:38248]

Thu Apr  2 14:17:09 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/openssl/test_ssl.rb (OpenSSL#test_client_session):
	  Debian's openssl 0.9.8g-13 failed at assert(ssl.session_reused?),
	  when use default SSLContext. [ruby-dev:36167]
	  backported r19268 from trunk. [ruby-core:22843]

Thu Mar 31 18:18:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (mkintpath): new function which converts native path
	  to format acceptable in Makefile.

	* lib/mkmf.rb (configuration): leaves PATH_SEPARATOR unchanged.

	* lib/mkmf.rb (configuration): convers srcdir, topdir and hdrdir.
	  a patch by Alexey Borzenkov <snaury AT gmail.com> at
	  [ruby-core:21448].

Fri Mar 27 19:22:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): frees zombies only.  [ruby-dev:38171]

Fri Mar 27 19:22:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_call_finalizer_at_exit): leave Thread objects
	  unfinalized.  [ruby-dev:38168]

Fri Mar 27 19:22:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
